grey.css - fixed some tag tooltip issue - width is now 250px, like in common color.css | grey_r2 -fixed styling for tooltips of tags& group progress bar in the group list css/icons/grey/ - added some grey buttons dark-style.css -general button markup -split the header pic into 2 parts; now content is accessible where the overlapping transparent area of the header was preventing that before -moves some menu in the header, was overflowing -hide text for which there were background-buttons (logout, search & profile) -changed width of g_section to auto, as that broke myplace etc. -dt:after no clue what this was for intentionally, but added : to every forum's topic in the listing and looked pretty bad -commented out -relocated the new file icon on anime pages -set some widths of table columns at the filelist -added matching colours for the forum, some stuff might be missing though -added styling for mesg boxes (error, warning, success, note), tooltips of tags& group progress bar in the group list -some margin between buttons, to prevent clustering -removed styling of the 'hide spoiler' button, was off colour-wise comment-grey.css added for using grey icons more easily
git-svn-id: svn://dev.anidb.net/svn/trunk@2557 bed53a55-4da3-433c-baf4-d4f70f2fd34a

--- a/css/grey/color.css
+++ b/css/grey/color.css
@@ -250,3 +250,25 @@ color: blue;
 {
 border-top: 1px dashed #c1c1c1;
 }
+#obj-tooltip
+{
+width: auto !important;
+height: auto !important;
+background-color: black;
+color: white;
+visibility: hidden;
+z-index: 100;
+}
+#obj-tooltip h1
+{
+display: none;
+}
+#obj-tooltip ul li,
+#obj-tooltip ul
+{
+list-style-type: none;
+margin: 0;
+padding: 0;
+text-align: left;
+vertical-align: middle;
+}
