--- a/css/grey/grey.css
+++ b/css/grey/grey.css
@@ -1943,7 +1943,7 @@ float: left;
 {
 width: auto !important;
 height: auto !important;
-background-color: maroon;
+background-color: black;
 color: white;
 visibility: hidden;
 z-index: 100;
@@ -2693,39 +2693,21 @@ display: none;
 {
 white-space: nowrap;
 }
+#tooltip
+{
+	color:#993300;
+	filter:alpha(opacity=90);
+	khtmlopacity:0.90;
+	mozopacity:0.90;
+	opacity:0.90;
+	font-size: 10px;
+	word-wrap: break-word;
+}
 /*Bubble Tooltip*/
 #tooltip span
 {
-display:none;
 font-size: 10px;
 color: white;
-}
-a:hover #tooltip
-{
-display: block;
-line-height: normal;
-padding: 0;
-margin: 0;
-margin-top: 7px;
-position: absolute;
-text-align: center;
-white-space: normal;
-width: 200px;
-}
-a:hover #tooltip span.top
-{
-display:block;
-padding:30px 8px 0;
-}
-a:hover #tooltip span.middle
-{
-display:block;
-padding:0 8px;
-}
-a:hover #tooltip span.bottom
-{
-display:block;
-padding:3px 8px 10px;
 }
 #tooltip span.top
 {
@@ -2733,7 +2715,7 @@ background:url(images/bubble.png) no-repeat top;
 }
 #tooltip span.middle
 {
-background:url(images/bubble_filler.png) repeat bottom;
+background:url(images/bubble_filler.png) repeat-y bottom;
 }
 #tooltip span.bottom
 {
